force-app/main/default/objects/Hierarchy_Relation__c/Hierarchy_Relation__c.object-meta.xml
<CustomObject>
    <label>Hierarchy Relation</label>
    <nameField>
        <label>Hrchy Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchy Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>