force-app/main/default/objects/Hierarchy_Relation__c/fields/From_Party_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Party_Number__c</fullName>
    <label>From Party Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>