force-app/main/default/objects/Hierarchy_Relation__c/fields/RelatedParty_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>RelatedParty_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RelatedParty Retry Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>