force-app/main/default/objects/Hierarchy_Relation__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>