force-app/main/default/objects/Hierarchy_Relation__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <label>Relationship Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>