force-app/main/default/objects/Hierarchy_Relation__c/fields/To_Party_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Party_Number__c</fullName>
    <label>To Party Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>